--- a/css/style.css
+++ b/css/style.css
@@ -1,25 +1,35 @@
+* {
+  margin: 0;
+  padding: 0;
+}
+
+main {
+  background-color: black;
+}
+
 .container {
-  max-width: 1440px;
+  max-width: 1200px;
   margin: 0 auto;
 }
 
-.site_header .site_header {
-  height: 90px;
+header {
+  background-color: black;
 }
-.site_header nav ul li {
+
+nav ul li {
   position: relative;
 }
-.site_header nav ul li a {
+nav ul li a {
   font-family: "Poppins", sans-serif;
   font-weight: 400;
   font-size: 15px;
   color: #ffffff;
   text-decoration: none;
 }
-.site_header nav ul li a:hover {
-  font-family: cera_probold;
+nav ul li a:hover {
+  font-family: "Poppins", sans-serif;
 }
-.site_header nav ul li:after {
+nav ul li:after {
   content: "";
   display: block;
   width: 0;
@@ -28,23 +38,22 @@
   margin-top: 10px;
   transition: 0.4s;
 }
-.site_header nav ul li:hover::after {
+nav ul li:hover::after {
   width: 100%;
 }
-.site_header nav ul li ul li:after {
+nav ul li ul li:after {
   display: none;
   width: auto;
 }
-.site_header nav ul li ul li:hover::after {
+nav ul li ul li:hover::after {
   width: auto;
 }
 
 header .container {
+  max-width: 1200px;
   display: flex;
   justify-content: space-around;
   align-items: center;
-  background-color: #181818;
-  height: 90px;
 }
 header .container nav ul {
   display: flex;
@@ -54,37 +63,33 @@ header .container nav ul {
   list-style: none;
   margin-left: 400px;
 }
-header .container button {
-  font-family: "Poppins", sans-serif;
-  font-weight: 400;
-  font-size: 16px;
-  color: #000;
-  width: 155px;
-  height: 42px;
-  border-radius: 14px;
-  background: #ffffff;
-  border: none;
-  margin-right: 30px;
-  margin-bottom: 10px;
-}
 header .container .logo_header {
   max-width: 100%;
-  margin-left: 132px;
 }
 header .container nav ul li {
   margin-bottom: 35px;
   margin-top: 35px;
 }
 
-.hero_section .hero_container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+.hero_section {
+  position: relative;
   background-image: url("../img/first-img.jpg");
   background-size: cover;
   height: calc(100vh - 90px);
   width: 100%;
   background-repeat: no-repeat;
+  margin-bottom: 120px;
+}
+.hero_section .hero_container {
+  max-width: 1200px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.hero_section .hero_text {
+  position: absolute;
+  bottom: 60px;
+  left: 420px;
 }
 .hero_section h3 {
   font-family: "Poppins", sans-serif;
@@ -110,23 +115,28 @@ header .container nav ul li {
 }
 .hero_section .hero_icons {
   position: absolute;
-  top: 654px;
+  bottom: 41px;
   right: 40px;
-  width: 294px;
-  height: 16px;
+}
+.hero_section a {
+  display: inline-block;
 }
 
 .gallery_section {
-  max-width: 1440px;
   background-color: #000000;
+  margin-bottom: 100px;
 }
 .gallery_section .container-gallery {
   max-width: 1200px;
+  margin: 0 auto;
 }
 .gallery_section .gallery {
   display: flex;
-  flex-direction: column;
-  max-width: 1168px;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+.gallery_section .text {
+  margin-bottom: 40px;
 }
 .gallery_section h4 {
   font-family: "Poppins", sans-serif;
@@ -139,8 +149,14 @@ header .container nav ul li {
   font-family: "Poppins", sans-serif;
   font-weight: 400;
   font-size: 14px;
-  text-align: center;
   color: #c0c0c0;
+}
+.gallery_section h5 {
+  font-family: "Poppins", sans-serif;
+  font-weight: 400;
+  font-size: 14px;
+  text-transform: uppercase;
+  color: #fff;
 }
 
 .gallery img {
@@ -150,9 +166,418 @@ header .container nav ul li {
 
 .gallery_image {
   display: flex;
-  flex-direction: row;
   flex-wrap: wrap;
+  gap: 16px;
+}
+
+.gallery_first {
+  position: relative;
+}
+
+.gallery_text1 {
+  position: absolute;
+  top: 495px;
+  left: 30px;
+}
+
+.gallery_text2 {
+  position: absolute;
+  top: 495px;
+  left: 30px;
+}
+
+.gallery_text3 {
+  position: absolute;
+  top: 495px;
+  left: 30px;
+}
+
+.gallery_text4 {
+  position: absolute;
+  top: 495px;
+  left: 30px;
+}
+
+.header_nav_list li.last_li a {
+  position: relative;
+  font-family: "Poppins", sans-serif;
+  padding: 10px 20px;
+  background-color: #fff;
+  color: #000;
+  border-radius: 14px;
+  align-items: center;
+  text-align: center;
+  font-weight: 400;
+  transition: 0.3s ease;
+}
+
+.header_nav_list li.last_li a:hover {
+  background-color: #ffffff;
+  color: #000;
+}
+
+.gallery_image p {
+  font-family: "Poppins", sans-serif;
+  font-weight: 400;
+  font-size: 14px;
+  color: #c0c0c0;
+}
+
+.sunset_section {
+  position: relative;
+  background-image: url("../img/sunset.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  width: 100%;
+  height: 100vh;
+}
+.sunset_section .container {
+  max-width: 1200px;
+  margin: 0 auto;
+}
+.sunset_section h5 {
+  font-family: "Poppins", sans-serif;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 143%;
+  letter-spacing: 0.14em;
+  text-transform: uppercase;
+  color: #ffffff;
+}
+.sunset_section p {
+  font-family: "Poppins", sans-serif;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 143%;
+  color: #c0c0c0;
+}
+.sunset_section .sunset {
+  position: absolute;
+  top: 260px;
+  right: 20px;
+}
+.sunset_section .slider {
+  position: absolute;
+  bottom: 41px;
+  right: 40px;
+}
+.sunset_section a {
+  display: inline-block;
+}
+
+.about_section {
+  position: relative;
+  background-color: black;
+  background-repeat: no-repeat;
+  width: 50%;
+  height: 100vh;
+}
+.about_section .container {
+  max-width: 1200px;
+  margin: 0 auto;
+}
+.about_section .about {
+  position: absolute;
+  top: 245px;
+  left: 30px;
+}
+.about_section h5 {
+  font-family: "Poppins", sans-serif;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 143%;
+  letter-spacing: 0.14em;
+  text-transform: uppercase;
+  color: #c0c0c0;
+}
+.about_section h4 {
+  font-family: "Poppins", sans-serif;
+  font-weight: 400;
+  font-size: 28px;
+  line-height: 114%;
+  color: #ffffff;
+}
+.about_section p {
+  font-family: "Poppins", sans-serif;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 143%;
+  color: #ffffff;
+}
+.about_section .check {
+  font-family: "Poppins", sans-serif;
+  padding: 10px 42px;
+  background-color: #fff;
+  color: #000;
+  border-radius: 14px;
+  align-items: flex-end;
+  text-align: end;
+  font-weight: 400;
+  transition: 0.3s ease;
+  position: relative;
+  top: 20px;
+  left: 0;
+  text-decoration: none;
+}
+.about_section .check:hover {
+  background-color: #ffffff;
+  color: #000;
+}
+.about_section .back-img {
+  position: absolute;
+  width: 100%;
+  top: 0;
+  left: 95%;
+}
+.about_section .about-right {
+  position: absolute;
+  top: 484px;
+  bottom: 41px;
+  right: -650px;
+}
+.about_section .about-right a {
+  display: inline-block;
+}
+
+.slider1_section {
+  position: relative;
+  background-image: url("../img/plant.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  height: 100vh;
+}
+.slider1_section .container {
+  max-width: 1200px;
+  margin: 0 auto;
+}
+.slider1_section .slider-1-text {
+  position: absolute;
+  top: 260px;
+  right: 87px;
+}
+.slider1_section h5 {
+  font-family: "Poppins", sans-serif;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 143%;
+  letter-spacing: 0.14em;
+  text-transform: uppercase;
+  color: #ffffff;
+}
+.slider1_section p {
+  font-family: "Poppins", sans-serif;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 143%;
+  color: #c0c0c0;
+}
+.slider1_section .slider-1-img {
+  position: absolute;
+  bottom: 41px;
+  right: 40px;
+}
+.slider1_section a {
+  display: inline-block;
+}
+
+.clients_section {
+  position: relative;
+  background-color: #000000;
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 100%;
+  height: 50vh;
+}
+.clients_section .container {
+  max-width: 1200px;
+  margin: 0 auto;
+}
+.clients_section .clients-text {
+  display: flex;
   justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  margin-top: 120px;
+}
+.clients_section h5 {
+  font-family: "Poppins", sans-serif;
+  font-weight: 400;
+  font-size: 40px;
+  line-height: 105%;
+  text-align: center;
+  color: #fff;
+}
+.clients_section p {
+  font-family: "Poppins", sans-serif;
+  font-weight: 400;
+  font-size: 24px;
+  line-height: 125%;
+  text-align: center;
+  color: #c0c0c0;
+}
+.clients_section .clients_logo {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 109px;
+  margin-top: 292px;
+}
+
+.slider2_section {
+  position: relative;
+  background-image: url("../img/Mounts.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  height: 100vh;
+}
+.slider2_section .container {
+  max-width: 1200px;
+  margin: 0 auto;
+}
+.slider2_section .slider-2-text {
+  position: absolute;
+  top: 260px;
+  right: 87px;
+}
+.slider2_section h5 {
+  font-family: "Poppins", sans-serif;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 143%;
+  letter-spacing: 0.14em;
+  text-transform: uppercase;
+  color: #fff;
+}
+.slider2_section p {
+  font-family: "Poppins", sans-serif;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 143%;
+  color: #c0c0c0;
+}
+.slider2_section .slider-2-img {
+  position: absolute;
+  bottom: 41px;
+  right: 40px;
+}
+.slider2_section a {
+  display: inline-block;
+}
+
+.help_section {
+  background-color: black;
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 100%;
+  height: 100vh;
+}
+.help_section .container {
+  max-width: 1200px;
+  margin: 0 auto;
+}
+.help_section .help_text {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  margin-top: 113px;
+}
+.help_section h3 {
+  font-family: "Poppins", sans-serif;
+  font-weight: 400;
+  font-size: 40px;
+  line-height: 105%;
+  text-align: center;
+  color: #fff;
+}
+.help_section p {
+  font-family: "Poppins", sans-serif;
+  font-weight: 400;
+  font-size: 24px;
+  line-height: 125%;
+  text-align: center;
+  color: #c0c0c0;
+}
+.help_section .help_btn {
+  font-family: "Poppins", sans-serif;
+  padding: 10px 42px;
+  background-color: #fff;
+  color: #000;
+  border-radius: 14px;
+  align-items: flex-end;
+  text-align: end;
+  font-weight: 400;
+  transition: 0.3s ease;
+  position: relative;
+  top: 20px;
+  left: 0;
+  text-decoration: none;
+}
+.help_section .help_btn .help_btn:hover {
+  background-color: #fff;
+  color: #000;
+}
+
+footer {
+  background-color: #000000;
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 100%;
+  height: 100vh;
+}
+footer .container {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  max-width: 1200px;
+  margin: 0 auto;
+}
+footer .copyright-logo {
+  width: 100%;
+}
+footer .copyright-logo p {
+  font-family: "Poppins", sans-serif;
+  font-weight: 400;
+  font-size: 13px;
+  line-height: 154%;
+  color: #c0c0c0;
+}
+footer .rights {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+footer .rights .first-li {
+  font-family: "Poppins", sans-serif;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 143%;
+  letter-spacing: 0.14em;
+  text-transform: uppercase;
+  color: #c0c0c0;
+}
+footer .rights ul li {
+  padding: 10px;
+}
+footer .rights ul li a {
+  font-family: "Poppins", sans-serif;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 143%;
+  color: #fff;
+}
+footer .copyright-left {
+  display: flex;
+  justify-content: flex-start;
+}
+footer .copyright-left h5 {
+  font-family: "Poppins", sans-serif;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 143%;
+  letter-spacing: 0.14em;
+  text-transform: uppercase;
+  color: #fff;
 }
 
 /*# sourceMappingURL=style.css.map */
