--- a/css/style.scss
+++ b/css/style.scss
@@ -1,12 +1,18 @@
+* {
+  margin: 0;
+  padding: 0;
+}
+main {
+  background-color: black;
+}
 .container {
-  max-width: 1440px;
+  max-width: 1200px;
   margin: 0 auto;
 }
 
-.site_header {
-  .site_header {
-    height: 90px;
-  }
+header {
+background-color: black;
+}
 
   nav {
     ul {
@@ -21,7 +27,7 @@
           text-decoration: none;
 
           &:hover {
-            font-family: cera_probold;
+            font-family:"Poppins", sans-serif;
           }
         }
 
@@ -54,13 +60,12 @@
       }
     }
   }
-}
+
 header .container {
+  max-width: 1200px;
   display: flex;
   justify-content: space-around;
   align-items: center;
-  background-color:#181818;
-  height: 90px;
 
 nav {
   ul {
@@ -72,23 +77,10 @@ nav {
     margin-left: 400px;
   }
 }
-  button {
-    font-family: "Poppins", sans-serif;
-    font-weight: 400;
-    font-size: 16px;
-    color: #000;
-    width: 155px;
-    height: 42px;
-    border-radius: 14px;
-    background: #ffffff;
-    border: none;
-    margin-right: 30px;
-    margin-bottom: 10px;
 
-  }
   .logo_header{
     max-width: 100%;
-    margin-left: 132px;
+
   }
   nav ul li {
     margin-bottom: 35px;
@@ -96,16 +88,27 @@ nav {
   }
 }
 .hero_section {
-.hero_container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  position: relative;
   background-image: url('../img/first-img.jpg');
   background-size: cover;
   height: calc(100vh - 90px);
   width: 100%;
   background-repeat: no-repeat;
+  margin-bottom: 120px;
+
+.hero_container {
+  max-width: 1200px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
 }
+  .hero_text {
+    position: absolute;
+    bottom:  60px;
+    left: 420px;
+
+  }
   h3 {
     font-family: "Poppins", sans-serif;
     font-weight: 400;
@@ -130,26 +133,31 @@ p {
 }
  .hero_icons {
    position: absolute;
-   top: 654px;
+   bottom: 41px;
    right: 40px;
-   width: 294px;
-   height: 16px;
 
  }
+  a {
+    display: inline-block;
+  }
 
 }
 .gallery_section {
-  max-width: 1440px;
   background-color: #000000;
+  margin-bottom: 100px;
 
   .container-gallery {
     max-width: 1200px;
+    margin: 0 auto;
   }
 
   .gallery {
     display: flex;
-   flex-direction: column;
-    max-width: 1168px;
+    justify-content: center;
+    flex-wrap: wrap;
+  }
+  .text {
+    margin-bottom: 40px;
   }
 
     h4 {
@@ -163,9 +171,15 @@ p {
       font-family: "Poppins", sans-serif;
       font-weight: 400;
       font-size: 14px;
-      text-align: center;
       color: #c0c0c0;
     }
+  h5 {
+    font-family: "Poppins", sans-serif;
+    font-weight: 400;
+    font-size: 14px;
+    text-transform: uppercase;
+    color: #fff;
+  }
   }
   .gallery img {
     width: 576px;
@@ -173,10 +187,417 @@ p {
   }
   .gallery_image {
     display: flex;
-    flex-direction: row ;
     flex-wrap: wrap;
-    justify-content: center;
+    gap: 16px;
 
 }
+  .gallery_first {
+    position: relative;
+  }
+  .gallery_text1 {
+    position: absolute;
+    top: 495px;
+    left: 30px;
 
+
+  }
+  .gallery_text2 {
+    position: absolute;
+    top: 495px;
+    left: 30px;
+  }
+  .gallery_text3 {
+    position: absolute;
+    top: 495px;
+    left: 30px;
+  }
+  .gallery_text4 {
+    position: absolute;
+    top: 495px;
+    left: 30px;
+  }
+
+.header_nav_list li.last_li a {
+  position: relative;
+  font-family: "Poppins", sans-serif;
+  padding: 10px 20px;
+  background-color: #fff;
+  color:  #000;
+  border-radius: 14px;
+  align-items: center;
+  text-align: center;
+  font-weight: 400;
+  transition: 0.3s ease;
+}
+
+.header_nav_list li.last_li a:hover {
+  background-color:#ffffff;
+  color: #000;
+
+}
+.gallery_image {
+  p {
+    font-family: "Poppins", sans-serif;
+    font-weight: 400;
+    font-size: 14px;
+    color: #c0c0c0;
+  }
+}
+.sunset_section {
+  position: relative;
+  background-image: url('../img/sunset.jpg');
+  background-size: cover;
+  background-repeat: no-repeat;
+  width: 100%;
+  height: 100vh;
+  .container {
+    max-width: 1200px;
+    margin: 0 auto;
+  }
+  h5 {
+    font-family: "Poppins", sans-serif;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 143%;
+    letter-spacing: 0.14em;
+    text-transform: uppercase;
+    color: #ffffff;
+  }
+  p {
+    font-family: "Poppins", sans-serif;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 143%;
+    color: #c0c0c0;
+  }
+  .sunset {
+    position: absolute;
+    top: 260px;
+    right: 20px;
+
+
+  }
+  .slider {
+    position: absolute;
+    bottom: 41px;
+    right: 40px;
+  }
+  a {
+    display: inline-block;
+  }
+}
+.about_section {
+  position: relative;
+  background-color: black;
+  background-repeat: no-repeat;
+  width: 50%;
+  height: 100vh;
+  .container {
+    max-width: 1200px;
+    margin: 0 auto;
+  }
+  .about {
+   position: absolute;
+    top: 245px;
+    left: 30px;
+
+  }
+  h5 {
+    font-family: "Poppins", sans-serif;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 143%;
+    letter-spacing: 0.14em;
+    text-transform: uppercase;
+    color:#c0c0c0;
+  }
+  h4 {
+    font-family: "Poppins", sans-serif;
+    font-weight: 400;
+    font-size: 28px;
+    line-height: 114%;
+    color: #ffffff;
+  }
+  p {
+    font-family: "Poppins", sans-serif;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 143%;
+    color: #ffffff;
+  }
+  .check{
+    font-family: "Poppins", sans-serif;
+    padding: 10px 42px;
+    background-color: #fff;
+    color: #000;
+    border-radius: 14px;
+    align-items: flex-end;
+    text-align: end;
+    font-weight: 400;
+    transition: 0.3s ease;
+    position: relative;
+    top: 20px;
+    left: 0;
+    text-decoration: none;
+  }
+  .check:hover {
+    background-color:#ffffff;
+    color: #000;
+  }
+  .back-img {
+    position: absolute;
+    width: 100%;
+    top: 0;
+    left: 95%;
+  }
+  .about-right {
+    position: absolute;
+    top: 484px;
+    bottom: 41px;
+    right: -650px;
+    a{
+      display: inline-block;
+    }
+  }
+}
+.slider1_section {
+  position: relative;
+  background-image: url('../img/plant.jpg');
+  background-size: cover;
+  background-repeat: no-repeat;
+  height: 100vh;
+  .container {
+    max-width: 1200px;
+    margin: 0 auto;
+  }
+  .slider-1-text {
+    position: absolute;
+    top: 260px;
+    right: 87px;
+  }
+  h5 {
+    font-family: "Poppins", sans-serif;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 143%;
+    letter-spacing: 0.14em;
+    text-transform: uppercase;
+    color: #ffffff;
+  }
+  p {
+    font-family: "Poppins", sans-serif;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 143%;
+    color: #c0c0c0;
+  }
+  .slider-1-img {
+    position: absolute;
+    bottom: 41px;
+    right: 40px;
+  }
+  a {
+    display: inline-block;
+  }
+
+}
+.clients_section {
+  position: relative;
+  background-color:#000000;
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 100%;
+  height: 50vh;
+  .container {
+    max-width: 1200px;
+    margin: 0 auto;
+  }
+  .clients-text {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    margin-top: 120px;
+  }
+  h5 {
+    font-family: "Poppins", sans-serif;
+    font-weight: 400;
+    font-size: 40px;
+    line-height: 105%;
+    text-align: center;
+    color: #fff;
+  }
+  p {
+    font-family: "Poppins", sans-serif;
+    font-weight: 400;
+    font-size: 24px;
+    line-height: 125%;
+    text-align: center;
+    color: #c0c0c0;
+  }
+  .clients_logo {
+   display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 109px;
+   margin-top: 292px;
+  }
+}
+.slider2_section {
+  position: relative;
+  background-image: url('../img/Mounts.jpg');
+  background-size: cover;
+  background-repeat: no-repeat;
+  height: 100vh;
+  .container {
+    max-width: 1200px;
+    margin: 0 auto;
+  }
+  .slider-2-text {
+    position: absolute;
+    top: 260px;
+    right: 87px;
+  }
+  h5 {
+    font-family: "Poppins", sans-serif;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 143%;
+    letter-spacing: 0.14em;
+    text-transform: uppercase;
+    color: #fff;
+  }
+  p {
+    font-family: "Poppins", sans-serif;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 143%;
+    color: #c0c0c0;
+  }
+  .slider-2-img {
+    position: absolute;
+    bottom: 41px;
+    right: 40px;
+  }
+  a {
+    display: inline-block;
+  }
+}
+.help_section {
+  background-color: black;
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 100%;
+  height: 100vh;
+  .container {
+    max-width: 1200px;
+    margin: 0 auto;
+  }
+  .help_text {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    margin-top: 113px;
+  }
+  h3 {
+    font-family: "Poppins", sans-serif;
+    font-weight: 400;
+    font-size: 40px;
+    line-height: 105%;
+    text-align: center;
+    color: #fff;
+  }
+  p {
+    font-family: "Poppins", sans-serif;
+    font-weight: 400;
+    font-size: 24px;
+    line-height: 125%;
+    text-align: center;
+    color: #c0c0c0;
+  }
+  .help_btn {
+    font-family: "Poppins", sans-serif;
+    padding: 10px 42px;
+    background-color: #fff;
+    color: #000;
+    border-radius: 14px;
+    align-items: flex-end;
+    text-align: end;
+    font-weight: 400;
+    transition: 0.3s ease;
+    position: relative;
+    top: 20px;
+    left: 0;
+    text-decoration: none;
+    .help_btn:hover {
+      background-color: #fff;
+      color: #000;
+    }
+  }
+}
+footer {
+  background-color: #000000;
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 100%;
+  height: 100vh;
+  .container {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    max-width: 1200px;
+    margin: 0 auto;
+  }
+  .copyright-logo {
+    width: 100%;
+    p{
+      font-family: "Poppins", sans-serif;
+      font-weight: 400;
+      font-size: 13px;
+      line-height: 154%;
+      color: #c0c0c0;
+
+    }
+
+  }
+  .rights {
+   display: flex;
+    justify-content: space-around;
+    align-items: center;
+    .first-li {
+      font-family: "Poppins", sans-serif;
+      font-weight: 400;
+      font-size: 14px;
+      line-height: 143%;
+      letter-spacing: 0.14em;
+      text-transform: uppercase;
+      color: #c0c0c0;
+    }
+    ul li {
+      padding: 10px;
+    }
+    ul li a {
+      font-family: "Poppins", sans-serif;
+      font-weight: 400;
+      font-size: 14px;
+      line-height: 143%;
+      color: #fff;
+    }
+  }
+.copyright-left {
+  display: flex;
+  justify-content: flex-start;
+  h5 {
+    font-family: "Poppins", sans-serif;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 143%;
+    letter-spacing: 0.14em;
+    text-transform: uppercase;
+    color: #fff;
+
+  }
+}
+}
 
