--- a/css/style.css
+++ b/css/style.css
@@ -88,11 +88,6 @@ header .container nav ul li {
   margin: 0 auto;
   height: 90vh;
 }
-.hero_section .hero_text {
-  position: absolute;
-  bottom: 60px;
-  left: 420px;
-}
 .hero_section h3 {
   font-family: "Poppins", sans-serif;
   font-weight: 400;
@@ -288,7 +283,7 @@ header .container nav ul li {
   background-color: black;
   background-repeat: no-repeat;
   width: 100%;
-  height: 540px;
+  min-height: 540px;
 }
 .about_section .container {
   max-width: 1200px;
@@ -364,6 +359,7 @@ header .container nav ul li {
   background-size: cover;
   background-repeat: no-repeat;
   height: 600px;
+  overflow: hidden;
 }
 .slider1_section .container {
   max-width: 1200px;
