--- a/css/style.scss
+++ b/css/style.scss
@@ -105,12 +105,7 @@ nav {
   height: 90vh;
 
 }
-  .hero_text {
-    position: absolute;
-    bottom:  60px;
-    left: 420px;
 
-  }
   h3 {
     font-family: "Poppins", sans-serif;
     font-weight: 400;
@@ -310,7 +305,7 @@ p {
   background-color: black;
   background-repeat: no-repeat;
   width: 100%;
-  height: 540px;
+  min-height: 540px;
   .container {
     max-width: 1200px;
     margin: 0 auto;
@@ -387,6 +382,7 @@ p {
   background-size: cover;
   background-repeat: no-repeat;
   height: 600px;
+  overflow: hidden;
   .container {
     max-width: 1200px;
     margin: 0 auto;
