--- a/css/style.css
+++ b/css/style.css
@@ -606,6 +606,7 @@ footer .footer-container {
   max-width: 1200px;
   margin: 0 auto;
   display: flex;
+  justify-content: space-between;
   flex-direction: column;
   gap: 40px;
 }
@@ -660,7 +661,12 @@ footer .footer-links .links-column ul li a {
 footer .footer-links .links-column ul li a:hover {
   text-decoration: underline;
 }
+footer .footer-newsletter {
+  display: flex;
+  justify-content: space-between;
+}
 footer .footer-newsletter .column-title {
+  font-family: "Poppins", sans-serif;
   font-size: 14px;
   letter-spacing: 0.14em;
   text-transform: uppercase;
@@ -669,22 +675,31 @@ footer .footer-newsletter .column-title {
 }
 footer .footer-newsletter p {
   margin-bottom: 15px;
-  font-size: 14px;
+  font-family: "Poppins", sans-serif;
+  font-weight: 400;
+  font-size: 13px;
+  line-height: 154%;
+  color: #c0c0c0;
 }
-footer .footer-newsletter .newsletter-form {
+footer .footer-newsletter .footer-form {
+  position: absolute;
+  left: 846px;
+  width: 458px;
+}
+footer .footer-newsletter .footer-form form {
   display: flex;
   border: 1px solid #fff;
   border-radius: 8px;
   overflow: hidden;
 }
-footer .footer-newsletter .newsletter-form input {
+footer .footer-newsletter .footer-form form input {
   flex: 1;
   padding: 10px;
   border: none;
   background: #fff;
   color: #000;
 }
-footer .footer-newsletter .newsletter-form button {
+footer .footer-newsletter .footer-form form button {
   background: #000;
   color: #fff;
   border: none;
