--- a/css/style.scss
+++ b/css/style.scss
@@ -629,6 +629,7 @@ footer {
     max-width: 1200px;
     margin: 0 auto;
     display: flex;
+    justify-content: space-between;
     flex-direction: column;
     gap: 40px;
   }
@@ -697,9 +698,12 @@ footer {
   }
 
   .footer-newsletter {
+    display: flex;
+    justify-content: space-between;
 
 
     .column-title {
+      font-family: "Poppins", sans-serif;
       font-size: 14px;
       letter-spacing: 0.14em;
       text-transform: uppercase;
@@ -709,10 +713,19 @@ footer {
 
     p {
       margin-bottom: 15px;
-      font-size: 14px;
+      font-family: "Poppins", sans-serif;
+      font-weight: 400;
+      font-size: 13px;
+      line-height: 154%;
+      color: #c0c0c0;
+    }
+    .footer-form {
+      position: absolute;
+      left: 846px;
+      width: 458px;
     }
 
-    .newsletter-form {
+    .footer-form form{
       display: flex;
       border: 1px solid #fff;
       border-radius: 8px;
