--- a/css/style.css
+++ b/css/style.css
@@ -597,6 +597,7 @@ header .container nav ul li {
 }
 
 footer {
+  position: relative;
   background-color: #000;
   color: #c0c0c0;
   padding: 60px 20px;
@@ -660,12 +661,30 @@ footer .footer-links .links-column ul li a {
 }
 footer .footer-links .links-column ul li a:hover {
   text-decoration: underline;
+  transition: 0.3s ease;
 }
 footer .footer-newsletter {
-  display: flex;
-  justify-content: space-between;
+  display: block;
+  position: absolute;
+  bottom: 100px;
+}
+footer .footer-newsletter .newsletter-text {
+  position: absolute;
+  bottom: 20px;
+  left: 0;
+}
+footer .footer-newsletter .newsletter-text::before {
+  content: "";
+  display: block;
+  width: 1200px;
+  height: 1px;
+  background-color: #333;
+  position: absolute;
+  top: -20px;
+  left: 0;
 }
 footer .footer-newsletter .column-title {
+  display: ruby-text;
   font-family: "Poppins", sans-serif;
   font-size: 14px;
   letter-spacing: 0.14em;
@@ -683,8 +702,9 @@ footer .footer-newsletter p {
 }
 footer .footer-newsletter .footer-form {
   position: absolute;
-  left: 846px;
+  left: 741px;
   width: 458px;
+  bottom: 40px;
 }
 footer .footer-newsletter .footer-form form {
   display: flex;
@@ -717,7 +737,11 @@ footer .footer-bottom {
   margin-top: 170px;
 }
 footer .footer-bottom p {
-  font-size: 12px;
+  font-family: "Poppins", sans-serif;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 143%;
+  color: #c0c0c0;
 }
 footer .footer-bottom ul {
   display: flex;
@@ -730,17 +754,14 @@ footer .footer-bottom ul li {
   list-style: none;
 }
 footer .footer-bottom ul li a {
-  width: 80px;
-  height: 80px;
+  width: 30px;
+  height: 30px;
   text-align: center;
-  line-height: 80px;
-  font-size: 35px;
+  font-size: 5px;
   margin: 0 10px;
   display: block;
-  border-radius: 50%;
   position: relative;
   overflow: hidden;
-  border: 3px solid #c0c0c0;
   z-index: 1;
 }
 footer .footer-bottom ul li a img {
@@ -769,7 +790,7 @@ footer .footer-bottom ul li a:hover:before {
 }
 footer .footer-bottom ul li:nth-child(1) a:before {
   background: #3b5999;
-  opacity: 0.4;
+  opacity: 0.6;
 }
 footer .footer-bottom ul li:nth-child(2) a:before {
   background: #55acee;
