--- a/css/style.scss
+++ b/css/style.scss
@@ -620,6 +620,7 @@ p {
   }
 }
 footer {
+  position: relative;
   background-color: #000;
   color: #c0c0c0;
   padding: 60px 20px;
@@ -662,6 +663,7 @@ footer {
     gap: 16px;
     margin-top: 100px;
 
+
     .links-column {
       .column-title {
         font-family: "Poppins", sans-serif;
@@ -690,6 +692,7 @@ footer {
 
             &:hover {
               text-decoration: underline;
+              transition: 0.3s ease;
             }
           }
         }
@@ -698,11 +701,28 @@ footer {
   }
 
   .footer-newsletter {
-    display: flex;
-    justify-content: space-between;
+    display: block;
+    position: absolute;
+    bottom: 100px;
+    .newsletter-text {
+     position: absolute;
+      bottom: 20px;
+      left: 0;
+      &::before {
+        content: "";
+        display: block;
+        width: 1200px;
+        height: 1px;
+        background-color: #333;
+        position: absolute;
+        top: -20px;
+        left: 0;
 
+      }
+}
 
     .column-title {
+      display: ruby-text;
       font-family: "Poppins", sans-serif;
       font-size: 14px;
       letter-spacing: 0.14em;
@@ -721,8 +741,9 @@ footer {
     }
     .footer-form {
       position: absolute;
-      left: 846px;
+      left: 741px;
       width: 458px;
+      bottom: 40px;
     }
 
     .footer-form form{
@@ -760,7 +781,11 @@ footer {
     margin-top: 170px;
 
     p {
-      font-size: 12px;
+      font-family: "Poppins", sans-serif;
+      font-weight: 400;
+      font-size: 14px;
+      line-height: 143%;
+      color: #c0c0c0;
     }
     ul {
       display: flex;
@@ -775,17 +800,14 @@ footer {
     }
 
     ul li a {
-      width: 80px;
-      height: 80px;
+      width: 30px;
+      height: 30px;
       text-align: center;
-      line-height: 80px;
-      font-size: 35px;
+      font-size: 5px;
       margin: 0 10px;
       display: block;
-      border-radius: 50%;
       position: relative;
       overflow: hidden;
-      border: 3px solid #c0c0c0;
       z-index: 1;
     }
 
@@ -819,7 +841,7 @@ footer {
 
     ul li:nth-child(1) a:before{
       background: #3b5999;
-      opacity: 0.4;
+      opacity: 0.6;
     }
 
     ul li:nth-child(2) a:before{
