--- a/css/style.scss
+++ b/css/style.scss
@@ -508,6 +508,7 @@ p {
     line-height: 105%;
     text-align: center;
     color: #fff;
+    margin-bottom: 15px;
   }
   p {
     font-family: "Poppins", sans-serif;
@@ -590,6 +591,7 @@ p {
     line-height: 105%;
     text-align: center;
     color: #fff;
+    margin-bottom: 15px;
   }
   p {
     font-family: "Poppins", sans-serif;
