--- a/css/style.css
+++ b/css/style.css
@@ -500,6 +500,10 @@ header .container nav ul li {
   gap: 109px;
   margin-top: 180px;
 }
+.clients_section img {
+  width: 50px;
+  height: 100px;
+}
 
 .slider2_section {
   position: relative;
@@ -667,9 +671,66 @@ footer .footer-newsletter {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
-  gap: 40px;
   border-bottom: 2px solid white;
   padding-bottom: 36px;
+  padding-top: 36px;
+}
+footer .subscribe-text .column-title {
+  font-family: "Poppins", sans-serif;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 143%;
+  letter-spacing: 0.14em;
+  text-transform: uppercase;
+  color: #fff;
+}
+footer .subscribe-text p {
+  font-family: "Poppins", sans-serif;
+  font-weight: 400;
+  font-size: 13px;
+  line-height: 154%;
+  color: #c0c0c0;
+}
+footer .footer-form {
+  display: flex;
+  border: 1px solid #e5e7eb;
+  border-radius: 12px;
+  background: #f9fafb;
+  width: 458px;
+  height: 52px;
+}
+footer .footer-form input {
+  border-radius: 8px;
+  border: none;
+  background: #f9fafb;
+  width: 376px;
+  height: 30px;
+}
+footer .btn-footer {
+  border-radius: 11px;
+  width: 63px;
+  height: 30px;
+  background-color: #000000;
+  border: none;
+}
+footer .footer-bottom {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  padding-top: 36px;
+}
+footer .footer-bottom p {
+  font-family: "Poppins", sans-serif;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 143%;
+  color: #c0c0c0;
+}
+footer .footer-social {
+  display: flex;
+  justify-content: space-between;
+  gap: 20px;
+  list-style-type: none;
 }
 
 .gallery_text2 .read_more:before {
