--- a/css/style.scss
+++ b/css/style.scss
@@ -183,12 +183,13 @@ p {
   }
   }
   .gallery img {
-    width: 576px;
-    height: 600px;
+    max-width: 100%;
+    height: auto;
+    display: block;
   }
   .gallery_image {
-    display: flex;
-    flex-wrap: wrap;
+    display: grid;
+   grid-template-columns: 1fr 1fr;
     gap: 16px;
 
 }
@@ -414,10 +415,16 @@ p {
     top: 20px;
     left: 0;
     text-decoration: none;
-    .check_img {
-      width: 20px;
-      height: 20px;
-    }
+   .check::before {
+     content: "";
+     display: inline-block;
+     width: 32px;
+     height: 32px;
+     background-color: rgb(0, 0, 0);
+     margin-bottom: -10px;
+     margin-left: -10px;
+     border-radius: 50%;
+   }
   }
   .check:hover {
     background-color:#ffffff;
